# review-insights

./: .env.example  .gitignore  CLAUDE.md  I18N_PLAN.md  LICENSE  README.md  app.py  architecture.md  pyproject.toml  requirements.txt  run_pipeline.py
.streamlit/: config.toml
clients/aguamadre/: config.yaml
clients/ida/: config.yaml
clients/mitica/: config.yaml
clients/panicafe/: config.yaml
clients/scissors_estudio/: config.yaml
clients/sportclub_mendiolaza/: config.yaml
clients/wegmans/: config.yaml
data/0_input/: competitors_reviews_sample.json
data/1_raw/: raw.csv
data/2_clean/: reviews_clean.csv
data/4_aggregated/: aggregated.csv
data/5_enriched/: insights_enriched.csv
data/processed/: reviews_classified.csv
data/sample/: IDA_reviews_sample.json
industries/beauty/: taxonomy.yaml
industries/beauty/prompts/: classification.md  enrichment.md  exec_summary.md
industries/gym/: taxonomy.yaml
industries/gym/prompts/: classification.md  enrichment.md  exec_summary.md
industries/peluquerias/: taxonomy.yaml
industries/peluquerias/prompts/: classification.md  enrichment.md  exec_summary.md
industries/restaurants/: taxonomy.yaml
industries/restaurants/prompts/: classification.md  enrichment.md  exec_summary.md
industries/supermarkets/: taxonomy.yaml
notebooks/: 01_eda.ipynb  02_pipeline_eval.ipynb
prompts/: classification_prompt.md  classify_review.md  executive_summary_prompt.md  insight_generation_prompt.md
scripts/: ping_llm.py
src/review_insights/: __init__.py  config.py
tests/fixtures/: multi_mention_examples.md
(+46 files in other folders)
