[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-insights"
version = "0.1.0"
description = "Productized service that turns customer reviews into actionable business insights."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Joaquin Ferrer" }]
keywords = ["nlp", "analytics", "reviews", "customer-feedback", "llm"]

dependencies = [
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "google-genai>=0.3",
    "streamlit>=1.35",
    "plotly>=5.22",
    "openpyxl>=3.1",
    "kaleido>=0.2",
    "playwright>=1.44",
    "jinja2>=3.1",
    "markdown>=3.6",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
